syntax = "proto3";
package com.hitnslab.dnssecurity.deeparcher.api.proto;
option java_package = "com.hitnslab.dnssecurity.deeparcher.api.proto.generated";
option java_outer_classname = "PDnsDataProto";
option optimize_for = SPEED;
option cc_enable_arenas = true;

message PDnsData {
  string fqdn = 1;
  string domain = 2;
  bytes client_ip = 3;
  int64 q_time = 4;
  int32 q_type = 5;
  int32 r_code = 6;
  bytes r_ipv4_addrs = 7;
  bytes r_ipv6_addrs = 8;
  repeated string r_cnames = 9;
}
